--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-pyTelegramBotAPI==4.14.0
-firebase-admin==6.4.0
-Flask==3.0.0
+pyTelegramBotAPI==4.22.0
+firebase-admin==6.5.0
+Flask==3.0.3
+gunicorn==23.0.0
